--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "sweetalert2": "^11.15.10",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.3",
     "tailwindcss-animate": "^1.0.7"
